WCMS-21326 and 21322: Adjust horizontal scroll class override, and fix loading screen and no results display on horizontally scrolled table

--- a/src/components/Datatable/datatable.scss
+++ b/src/components/Datatable/datatable.scss
@@ -12,6 +12,10 @@
   }
 }
 
+.dc-c-datatable-wrapper {
+  overflow: auto;
+}
+
 .dc-thead--fixed-size th {
   border-left: 2px solid var(--color-border);
 }
@@ -89,14 +93,3 @@
 .dc-c-sort--desc::after {
   content: '\f0dd';
 }
-
-
-// @media (hover: hover) {
-//   .resizer {
-//     opacity: 0;
-//   }
-
-//   *:hover > .resizer {
-//     opacity: 1;
-//   }
-// }
